--- a/MoTMe/Views/Home/About.cshtml
+++ b/MoTMe/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
+<div ng-controller="Controller">
+  <h1>{{test}}</h1>
+</div>
+
 <p>Use this area to provide additional information.</p>
