--- a/MoTMe/Views/Shared/_Layout.cshtml
+++ b/MoTMe/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body>
+<body ng-app="MoTMe">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -39,6 +39,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/scripts/angular.js")
+    @Scripts.Render("~/scripts/app.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
