GetUserById passing test

--- a/MoTMe/Views/Home/About.cshtml
+++ b/MoTMe/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<div ng-controller="Controller">
+<div ng-controller="Controller" ng-click="hello()">
   <h1>{{test}}</h1>
 </div>
 
