--- a/MoTMe/Views/Home/About.cshtml
+++ b/MoTMe/Views/Home/About.cshtml
@@ -8,4 +8,9 @@
   <h1>{{test}}</h1>
 </div>
 
+<h1>@ViewBag.Thing</h1>
+@*<div ng-repeat="item in @ViewBag.List">
+    <h1>{{item}}</h1>
+</div>*@
+
 <p>Use this area to provide additional information.</p>
