last commit before creating users

--- a/MoTMe/Views/Home/About.cshtml
+++ b/MoTMe/Views/Home/About.cshtml
@@ -8,7 +8,8 @@
   <h1>{{test}}</h1>
 </div>
 
-<h1>@ViewBag.Thing</h1>
+<h1>@ViewBag.Thing.Body</h1>
+
 @*<div ng-repeat="item in @ViewBag.List">
     <h1>{{item}}</h1>
 </div>*@
