made method for getting User.Id from UserIdLink. test not passing yet

--- a/MoTMe/Views/Home/About.cshtml
+++ b/MoTMe/Views/Home/About.cshtml
@@ -6,6 +6,8 @@
 
 <div ng-controller="Controller" ng-click="hello()">
   <h1>{{test}}</h1>
+  <h1>UserIdLink: {{UserIdLink}}</h1>
+  <h1>UserId: {{UserId}}</h1>
 </div>
 
 @*<h1>@ViewBag.Thing.Body</h1>*@
