--- a/MoTMe/Views/Shared/_Layout.cshtml
+++ b/MoTMe/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body ng-app="MoTMe">
+<body ng-app="MoTMe" ng-controller="RootCtrl">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
