--- a/MoTMe/Views/Home/About.cshtml
+++ b/MoTMe/Views/Home/About.cshtml
@@ -1,13 +1,14 @@
 ﻿@{
     ViewBag.Title = "About";
 }
+<div ng-controller="AboutCtrl">
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<div ng-controller="Controller" ng-click="hello()">
-  <h1>{{test}}</h1>
-  <h1>UserIdLink: {{UserIdLink}}</h1>
-  <h1>UserId: {{UserId}}</h1>
+<div ng-click="hello()">
+    <h1>{{test}}</h1>
+    <h1>UserIdLink: {{UserIdLink}}</h1>
+    <h1>UserId: {{UserId}}</h1>
 </div>
 
 @*<h1>@ViewBag.Thing.Body</h1>*@
@@ -17,3 +18,4 @@
 </div>*@
 
 <p>Use this area to provide additional information.</p>
+</div>
