--- a/MoTMe/Views/Home/Index.cshtml
+++ b/MoTMe/Views/Home/Index.cshtml
@@ -2,7 +2,6 @@
     ViewBag.Title = "Home Page";
     //Layout = "~/Views/Shared/MoTMe_layout.cshtml";
 }
-@Styles.Render("~/Content/css")
 <div ng-controller="IndexCtrl">
 <div class="row">
     <div class="col-sm-3">
@@ -10,6 +9,7 @@
     </div>
     <div class="col-sm-6">
         <h1>messages</h1>
+        <h3 ng-repeat="message in messages">{{message.Body}}</h3>
     </div>
     <div class="col-sm-3">
         <h1>alerts</h1>
