--- a/MoTMe/Views/Home/Index.cshtml
+++ b/MoTMe/Views/Home/Index.cshtml
@@ -23,8 +23,9 @@
         <br />
         <br />
         <br />
-        <input type="text" class="form-control" ng-model="body" />
-        <button class="btn btn-default" ng-click="AddMessage(body)">Send</button>
+        <input type="text" class="form-control" id="text" ng-model="body" />
+        <button id="button" class="btn btn-default" ng-click="AddMessage(body)">Send</button>
+
     </div>
     <div class="col-sm-3">
         <h1>alerts</h1>
