added css in. picked color theme

--- a/MoTMe/Views/Home/Index.cshtml
+++ b/MoTMe/Views/Home/Index.cshtml
@@ -23,9 +23,10 @@
         <br />
         <br />
         <br />
-        <input type="text" class="form-control" id="text" ng-model="body" />
-        <button id="button" class="btn btn-default" ng-click="AddMessage(body)">Send</button>
-
+        <div id="chat">
+            <input type="text" class="" id="text" ng-model="body"/>
+            <button id="button" class="btn btn-default" ng-click="AddMessage(body)">Send</button>
+        </div>
     </div>
     <div class="col-sm-3">
         <h1>alerts</h1>
