--- a/MoTMe/Content/Site.css
+++ b/MoTMe/Content/Site.css
@@ -1,4 +1,10 @@
-﻿body {
+﻿/*THEME*/
+/*#534DFF - darkblue*/
+/*#E8596A - redish*/
+/*#FFDA86 - tanish*/
+/*#76E859 - greenish*/
+/*#79D5FF - bluish*/
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -8,7 +14,6 @@
     padding-left: 15px;
     padding-right: 15px;
 }
-
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
@@ -17,8 +22,7 @@
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+
+div#chat{
+    display: inline-block;
 }
