--- a/MoTMe/Views/Home/Index.cshtml
+++ b/MoTMe/Views/Home/Index.cshtml
@@ -12,20 +12,28 @@
         @*<h3 ng-repeat="contact in contacts">{{contact.name}}</h3>*@
     </div>
     <div class="col-sm-6">
-        <h1>messages</h1>
-        <h2>{{clickedContact.Name}}</h2>
-        <div class="panel panel-body" ng-repeat="message in messages">
-            <h3 ng-if="message.AuthorId == user.Id">You</h3>
-            <h3 ng-if="message.AuthorId == clickedContact.Id">{{clickedContact.Name}}</h3>
-            <h6>{{message.Date}}</h6>
-            <h4>{{message.Body}}</h4>
-        </div>
-        <br />
-        <br />
-        <br />
         <div id="chat" ng-if="clickedContact != undefined">
-            <input type="text" class="" ng-model="$parent.body" my-enter="AddMessage(body)"/>
-            <button class="btn btn-default" ng-click="AddMessage(body)">Send</button>
+            <input type="checkbox" ng-model="sms" />Send text message
+            @*<button type="button" class="btn btn-default" ng-model="sms">Send Text Message</button>*@
+            <div ng-hide="sms">
+                <h1>messages</h1>
+                <h2>{{clickedContact.Name}}</h2>
+                <div class="panel panel-body" ng-repeat="message in messages">
+                    <h3 ng-if="message.AuthorId == user.Id">You</h3>
+                    <h3 ng-if="message.AuthorId == clickedContact.Id">{{clickedContact.Name}}</h3>
+                    <h6>{{message.Date}}</h6>
+                    <h4>{{message.Body}}</h4>
+                </div>
+                <br />
+                <br />
+                <br />
+                    <input type="text" class="" ng-model="$parent.body" my-enter="AddMessage(body)"/>
+                    <button class="btn btn-default" ng-click="AddMessage(body)">Send</button>
+            </div>
+            <div ng-show="sms">
+                <textarea class="form-control" ng-model="smsContent" placeholder="Enter your text message"></textarea>
+                <button class="btn btn-default" ng-click="SendSMS(smsContent)">Send Text</button>
+            </div>
         </div>
         <h3 ng-if="clickedContact == undefined">Click a user to message</h3>
     </div>
