--- a/MoTMe/Views/Shared/_Layout.cshtml
+++ b/MoTMe/Views/Shared/_Layout.cshtml
@@ -31,12 +31,12 @@
         </div>
     </div>
         @RenderBody()
-    <div class="container body-content">
+    @*<div class="container body-content">
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
-    </div>
+    </div>*@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
