--- a/MoTMe/Content/Site.css
+++ b/MoTMe/Content/Site.css
@@ -7,7 +7,8 @@
 body {
     padding-top: 50px;
     padding-bottom: 20px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif !important;
+    /*font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif !important;*/
+    font-family: Arial;
     height: calc(100vh - 70px);
 }
 
