--- a/MoTMe/Content/Site.css
+++ b/MoTMe/Content/Site.css
@@ -85,3 +85,11 @@ div#chat{
   from {opacity: .6;}
   to {opacity: 1;}
 }
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    /*-khtml-user-select: none;*/
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
