--- a/MoTMe/Views/Account/Register.cshtml
+++ b/MoTMe/Views/Account/Register.cshtml
@@ -7,6 +7,7 @@
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
+<div ng-app="MoTMe" ng-controller="PhoneCtrl">
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
     <hr />
@@ -41,13 +42,22 @@
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group" ng-if="isValidated == false">
+        <button type="button" class="btn btn-default" ng-click="SendCode()">Get Phone code</button>
+        <input type="text" ng-model="userCode" />
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <button type="button" class="btn btn-default" ng-click="CheckIfMatchesCode()">Submit Code</button>
         </div>
     </div>
+    <div class="form-group" ng-if="isValidated == true">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" class="btn btn-primary" value="Register" />
+        </div>
+    </div>
+</div>
 }
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/scripts/app.js")
 }
