--- a/MoTMe/Views/Home/About.cshtml
+++ b/MoTMe/Views/Home/About.cshtml
@@ -1,21 +1,9 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Alerts";
 }
-<div ng-controller="AboutCtrl">
+<div ng-controller="AlertCtrl">
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
-
-<div ng-click="hello()">
-    <h1>{{test}}</h1>
-    <h1>UserIdLink: {{UserIdLink}}</h1>
-    <h1>UserId: {{UserId}}</h1>
-</div>
-
-@*<h1>@ViewBag.Thing.Body</h1>*@
-
-@*<div ng-repeat="item in @ViewBag.List">
-    <h1>{{item}}</h1>
-</div>*@
 
 <p>Use this area to provide additional information.</p>
 </div>
